--- a/Kiba/Base.lproj/Main.storyboard
+++ b/Kiba/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="H1p-Uh-vWS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="H1p-Uh-vWS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -67,7 +67,7 @@
         <!--Dashboard Controller-->
         <scene sceneID="Ue0-pA-TIs">
             <objects>
-                <viewController storyboardIdentifier="Dashboard" id="iAP-1t-IAz" customClass="KBADashboardController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="dashboard" id="iAP-1t-IAz" customClass="KBADashboardController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GIV-qy-FhS"/>
                         <viewControllerLayoutGuide type="bottom" id="zPK-rA-9Ir"/>
@@ -92,7 +92,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hBQ-is-FIM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="540" y="1138"/>
+            <point key="canvasLocation" x="-836" y="1470"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="QGJ-Ue-2PS">
+            <objects>
+                <viewController storyboardIdentifier="auth" id="QNU-Gf-9Rc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3Kk-an-a1H"/>
+                        <viewControllerLayoutGuide type="bottom" id="s4k-q1-zNd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3Fk-aE-nuf">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <splitViewDetailSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RNV-9D-2cE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136" y="1470"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Nki-YV-4Qg">
