--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -20,3 +20,17 @@ img.kiba {
     right: 20px;
     bottom: 20px;
 }
+
+.chart {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+}
+
+.chart-label {
+    font-family: 'Roboto', sans-serif;
+    font-size: 10pt;
+    text-align: center;
+    padding: 2px;
+    color: white;
+}
