--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -22,9 +22,10 @@ img.kiba {
 }
 
 .chart {
-    width: 100%;
-    height: 200px;
-    margin-bottom: 20px;
+    width: 180px;
+    height: 180px;
+    margin: 20px auto;
+    position: relative;
 }
 
 .chart-label {
